tests/cli_renderer_not_all_2/cli_renderer_not_all_2.exp
Error ------------------------------------------------------------------------------------------------------ test.js:6:2

Cannot cast `1` to empty because number [1] is incompatible with empty [2].

   test.js:6:2
   6| (1: empty); // Error: number ~> empty
       ^ [1]

References:
   test.js:6:5
   6| (1: empty); // Error: number ~> empty
          ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:7:2

Cannot cast `2` to empty because number [1] is incompatible with empty [2].

   test.js:7:2
   7| (2: empty); // Error: number ~> empty
       ^ [1]

References:
   test.js:7:5
   7| (2: empty); // Error: number ~> empty
          ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:8:2

Cannot cast `3` to empty because number [1] is incompatible with empty [2].

   test.js:8:2
   8| (3: empty); // Error: number ~> empty
       ^ [1]

References:
   test.js:8:5
   8| (3: empty); // Error: number ~> empty
          ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:9:2

Cannot cast `4` to empty because number [1] is incompatible with empty [2].

   test.js:9:2
   9| (4: empty); // Error: number ~> empty
       ^ [1]

References:
   test.js:9:5
   9| (4: empty); // Error: number ~> empty
          ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:10:2

Cannot cast `5` to empty because number [1] is incompatible with empty [2].

   test.js:10:2
   10| (5: empty); // Error: number ~> empty
        ^ [1]

References:
   test.js:10:5
   10| (5: empty); // Error: number ~> empty
           ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:11:2

Cannot cast `6` to empty because number [1] is incompatible with empty [2].

   test.js:11:2
   11| (6: empty); // Error: number ~> empty
        ^ [1]

References:
   test.js:11:5
   11| (6: empty); // Error: number ~> empty
           ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:12:2

Cannot cast `7` to empty because number [1] is incompatible with empty [2].

   test.js:12:2
   12| (7: empty); // Error: number ~> empty
        ^ [1]

References:
   test.js:12:5
   12| (7: empty); // Error: number ~> empty
           ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:13:2

Cannot cast `8` to empty because number [1] is incompatible with empty [2].

   test.js:13:2
   13| (8: empty); // Error: number ~> empty
        ^ [1]

References:
   test.js:13:5
   13| (8: empty); // Error: number ~> empty
           ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:14:2

Cannot cast `9` to empty because number [1] is incompatible with empty [2].

   test.js:14:2
   14| (9: empty); // Error: number ~> empty
        ^ [1]

References:
   test.js:14:5
   14| (9: empty); // Error: number ~> empty
           ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:15:2

Cannot cast `10` to empty because number [1] is incompatible with empty [2].

   test.js:15:2
   15| (10: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:15:6
   15| (10: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:16:2

Cannot cast `11` to empty because number [1] is incompatible with empty [2].

   test.js:16:2
   16| (11: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:16:6
   16| (11: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:17:2

Cannot cast `12` to empty because number [1] is incompatible with empty [2].

   test.js:17:2
   17| (12: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:17:6
   17| (12: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:18:2

Cannot cast `13` to empty because number [1] is incompatible with empty [2].

   test.js:18:2
   18| (13: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:18:6
   18| (13: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:19:2

Cannot cast `14` to empty because number [1] is incompatible with empty [2].

   test.js:19:2
   19| (14: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:19:6
   19| (14: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:20:2

Cannot cast `15` to empty because number [1] is incompatible with empty [2].

   test.js:20:2
   20| (15: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:20:6
   20| (15: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:21:2

Cannot cast `16` to empty because number [1] is incompatible with empty [2].

   test.js:21:2
   21| (16: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:21:6
   21| (16: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:22:2

Cannot cast `17` to empty because number [1] is incompatible with empty [2].

   test.js:22:2
   22| (17: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:22:6
   22| (17: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:23:2

Cannot cast `18` to empty because number [1] is incompatible with empty [2].

   test.js:23:2
   23| (18: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:23:6
   23| (18: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:24:2

Cannot cast `19` to empty because number [1] is incompatible with empty [2].

   test.js:24:2
   24| (19: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:24:6
   24| (19: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:25:2

Cannot cast `20` to empty because number [1] is incompatible with empty [2].

   test.js:25:2
   25| (20: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:25:6
   25| (20: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:26:2

Cannot cast `21` to empty because number [1] is incompatible with empty [2].

   test.js:26:2
   26| (21: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:26:6
   26| (21: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:27:2

Cannot cast `22` to empty because number [1] is incompatible with empty [2].

   test.js:27:2
   27| (22: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:27:6
   27| (22: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:28:2

Cannot cast `23` to empty because number [1] is incompatible with empty [2].

   test.js:28:2
   28| (23: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:28:6
   28| (23: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:29:2

Cannot cast `24` to empty because number [1] is incompatible with empty [2].

   test.js:29:2
   29| (24: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:29:6
   29| (24: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:30:2

Cannot cast `25` to empty because number [1] is incompatible with empty [2].

   test.js:30:2
   30| (25: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:30:6
   30| (25: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:31:2

Cannot cast `26` to empty because number [1] is incompatible with empty [2].

   test.js:31:2
   31| (26: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:31:6
   31| (26: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:32:2

Cannot cast `27` to empty because number [1] is incompatible with empty [2].

   test.js:32:2
   32| (27: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:32:6
   32| (27: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:33:2

Cannot cast `28` to empty because number [1] is incompatible with empty [2].

   test.js:33:2
   33| (28: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:33:6
   33| (28: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:34:2

Cannot cast `29` to empty because number [1] is incompatible with empty [2].

   test.js:34:2
   34| (29: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:34:6
   34| (29: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:35:2

Cannot cast `30` to empty because number [1] is incompatible with empty [2].

   test.js:35:2
   35| (30: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:35:6
   35| (30: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:36:2

Cannot cast `31` to empty because number [1] is incompatible with empty [2].

   test.js:36:2
   36| (31: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:36:6
   36| (31: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:37:2

Cannot cast `32` to empty because number [1] is incompatible with empty [2].

   test.js:37:2
   37| (32: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:37:6
   37| (32: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:38:2

Cannot cast `33` to empty because number [1] is incompatible with empty [2].

   test.js:38:2
   38| (33: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:38:6
   38| (33: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:39:2

Cannot cast `34` to empty because number [1] is incompatible with empty [2].

   test.js:39:2
   39| (34: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:39:6
   39| (34: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:40:2

Cannot cast `35` to empty because number [1] is incompatible with empty [2].

   test.js:40:2
   40| (35: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:40:6
   40| (35: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:41:2

Cannot cast `36` to empty because number [1] is incompatible with empty [2].

   test.js:41:2
   41| (36: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:41:6
   41| (36: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:42:2

Cannot cast `37` to empty because number [1] is incompatible with empty [2].

   test.js:42:2
   42| (37: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:42:6
   42| (37: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:43:2

Cannot cast `38` to empty because number [1] is incompatible with empty [2].

   test.js:43:2
   43| (38: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:43:6
   43| (38: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:44:2

Cannot cast `39` to empty because number [1] is incompatible with empty [2].

   test.js:44:2
   44| (39: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:44:6
   44| (39: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:45:2

Cannot cast `40` to empty because number [1] is incompatible with empty [2].

   test.js:45:2
   45| (40: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:45:6
   45| (40: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:46:2

Cannot cast `41` to empty because number [1] is incompatible with empty [2].

   test.js:46:2
   46| (41: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:46:6
   46| (41: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:47:2

Cannot cast `42` to empty because number [1] is incompatible with empty [2].

   test.js:47:2
   47| (42: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:47:6
   47| (42: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:48:2

Cannot cast `43` to empty because number [1] is incompatible with empty [2].

   test.js:48:2
   48| (43: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:48:6
   48| (43: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:49:2

Cannot cast `44` to empty because number [1] is incompatible with empty [2].

   test.js:49:2
   49| (44: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:49:6
   49| (44: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:50:2

Cannot cast `45` to empty because number [1] is incompatible with empty [2].

   test.js:50:2
   50| (45: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:50:6
   50| (45: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:51:2

Cannot cast `46` to empty because number [1] is incompatible with empty [2].

   test.js:51:2
   51| (46: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:51:6
   51| (46: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:52:2

Cannot cast `47` to empty because number [1] is incompatible with empty [2].

   test.js:52:2
   52| (47: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:52:6
   52| (47: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:53:2

Cannot cast `48` to empty because number [1] is incompatible with empty [2].

   test.js:53:2
   53| (48: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:53:6
   53| (48: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:54:2

Cannot cast `49` to empty because number [1] is incompatible with empty [2].

   test.js:54:2
   54| (49: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:54:6
   54| (49: empty); // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:57:6

Cannot cast object literal to object type because number [1] is incompatible with empty [2] in property `a`.

   test.js:57:6
   57|   a: 1, // Error: number ~> empty
            ^ [1]

References:
   test.js:61:6
   61|   a: empty,
            ^^^^^ [2]



... 5 more errors (only 50 out of 55 errors displayed)
To see all errors, re-run Flow with --show-all-errors
